Add theme informations

--- a/databags/menu.ini
+++ b/databags/menu.ini
@@ -6,6 +6,10 @@ label = Get Started
 path = /schema
 label = Schema
 
-[resume-maker]
+[sthemes]
+path = /themes
+label = Themes
+
+[resume-builder]
 path = #
-label = Resume Maker (soon)
+label = Resume Builder (soon)
